GNOME Bugzilla – Bug 770849
GtkLabel with padding brokenness
Last modified: 2016-09-05 04:56:04 UTC
Created attachment 334750 [details] python example I think this is since 3.20. Putting a GtkLabel in a GtkExpander with the GtkLabel having padding breaks the expander. The label draws outside of the parent widget and the selection drawing is broken. Python example attached.
Created attachment 334751 [details] screenshot showing the problem
Thanks!